<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/space_medium"
    tools:context=".activity.detail.UserDetailActivity">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/text_large"
        android:textColor="@color/black"
        android:text="@string/detail_user"
        android:textStyle="bold" />

    <LinearLayout
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="@dimen/text_medium"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/space_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            />

        <TextView
            android:id="@+id/textName"
            android:textSize="@dimen/text_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold" />


        <TextView
            android:textSize="@dimen/text_medium"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/space_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            />

        <TextView
            android:id="@+id/textEmail"
            android:textSize="@dimen/text_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:textSize="@dimen/text_medium"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/space_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            />

        <TextView
            android:id="@+id/textAddress"
            android:textSize="@dimen/text_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>